# project-euler-haskell

./: .dockerignore  10.hs  11.hs  12.hs  2.hs  3.hs  4.hs  5.hs  6.hs  7.hs  8.hs  9.hs  Dockerfile  README.md  default.nix  primes.hs  project-euler-haskell.cabal  project-euler-haskell.nix  shell.nix
src/: Main.hs
src/Euler/Lib/: Divisors.hs  Fibonacci.hs  Primes.hs  Solution.hs
src/Euler/Problems/: Problem001.hs  Problem002.hs  Problem003.hs  Problem004.hs  Problem005.hs  Problem006.hs  Problem007.hs  Problem008.hs  Problem009.hs  Problem010.hs  Problem011.hs  Problem012.hs  Problem013.hs  Problem014.hs  Problem015.hs  Problem016.hs  Problem017.hs  Problem018.hs  Problem019.hs  Problem020.hs  Problem021.hs  Problem022.hs  Problem023.hs  Problem024.hs  Problem025.hs
tests/: Tests.hs
